some database fixes, finishing up statistics

--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -8,6 +8,9 @@
         android:id="@+id/fragment_stats_pie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="60dp"/>
+        android:paddingTop="60dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="20dp"/>
 
 </FrameLayout>
