--- a/app/src/main/res/layout/item_records.xml
+++ b/app/src/main/res/layout/item_records.xml
@@ -5,6 +5,7 @@
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:layout_marginTop="30dp"
+              android:layout_marginBottom="10dp"
               android:background="@drawable/border_bottom"
               android:orientation="horizontal"
               android:weightSum="1">
