--- a/app/src/main/res/menu/add_project.xml
+++ b/app/src/main/res/menu/add_project.xml
@@ -2,9 +2,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
-    <item android:id="@+id/action_save"
-          android:title="@string/action_save"
-          android:orderInCategory="100"
-          android:visible="false"
-          app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="100"
+        android:title="@string/action_save"
+        android:visible="false"
+        app:showAsAction="always"/>
 </menu>
